2009-07-12 Braden McDaniel  <braden@endoframe.com>

	Remove obsolete configuration code supporting linking with
	libjvm.  (We don't do that anymore.)

	* examples/Makefile.am: Removed obsolete use of JNI_LIBS.
	* m4/jdk.m4: Removed unused OV_CHECK_JNI macro.

2009-07-12 Braden McDaniel  <braden@endoframe.com>

	* tests/Makefile.am: Removed obsolete use of OPENVRML_RPATH.

2009-07-12 Braden McDaniel  <braden@endoframe.com>

	* examples/Makefile.am: Removed obsolete use of OPENVRML_RPATH.

2009-07-07 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.2 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc

2009-07-07 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Added ppc, ppc64 awareness to search path for
	libjvm.

2009-07-05 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.1 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am
	(LIBOPENVRML_LIBRARY_VERSION): Updated to 9:1:0.

2009-07-04 Braden McDaniel  <braden@endoframe.com>

	Applied OPENVRML_API to event listener/emitter class templates.

	* src/libopenvrml/openvrml/event.h
	(field_value_listener): Applied OPENVRML_API.
	(node_field_value_listener): Applied OPENVRML_API.
	(field_value_emitter): Applied OPENVRML_API.

2009-07-04 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.0 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc